@@ -205,6 +205,18 @@ let to_string t =
   unsafe_blit_bigstring_to_string t.buffer t.off s 0 sz;
   s
 
+let of_string ?allocator buf =
+  let buflen = String.length buf in
+  match allocator with
+  |None -> 
+    let c = create buflen in
+    blit_from_string buf 0 c 0 buflen;
+    c
+  |Some fn -> 
+    let c = fn buflen in
+    blit_from_string buf 0 c 0 buflen;
+    set_len c buflen
+    
 let hexdump t =
   let c = ref 0 in
   for i = 0 to len t - 1 do
