@@ -1,5 +1,6 @@
 0.7.0 (trunk):
 
+* Add an `of_string` function to simplify the construction from OCaml values.
 * Add Async interface to interoperate with Jane Street Core code.
 
 0.6.2 (08-Feb-2013):
